--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ url('https://SimonePaci.github.io/img/headers/columbia.jpg');
 
 <h1 id="biography">Biography</h1>
 
-<p>Simone Paci is a Ph.D. student in the Department of Political Science at Columbia University. His primary field is Comparative Politics and his primary region of interest is Western Europe. His current projects include a study of status and war in the context of the Italian unification (together with Nicholas Sambanis) and a micro-level analysis of the impact of WWI military casualties across Italian municipalities.</p>
+<p>Simone Paci is a Ph.D. student in the Department of Political Science at Columbia University. His primary field is Comparative Politics and his primary region of interest is Western Europe. His current projects include a study of status and war in the context of the Italian unification (together with Nicholas Sambanis and William Wohlforth) and a micro-level analysis of the impact of WWI military casualties across Italian municipalities.</p>
 
 <p>Simone received his B.A. in Political Science and Economics from Yale University, where he graduated summa cum laude and Phi Beta Kappa. Prior to coming to Columbia, he worked as research assistant to Nuno Monteiro (Yale University) and Nicholas Sambanis (University of Pennsylvania), as well as research trainee at ISPI (Istituto di Studi Politici Internazionali) in Milan, Italy.</p>
 
@@ -310,7 +310,7 @@ url('https://SimonePaci.github.io/img/headers/columbia.jpg');
           <li>
             <i class="fa-li fa fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">MA in Political Science, 2018 (Expected)</p>
+              <p class="course">MA in Political Science, 2018</p>
               <p class="institution">Columbia University</p>
             </div>
           </li>
@@ -396,7 +396,7 @@ url('https://SimonePaci.github.io/img/headers/columbia.jpg');
           <div class="card-text">
             <h4><a href="https://SimonePaci.github.io/project/piedmont-sambanis/" >Nation-Building Through War: Piedmont and the Unification of Italy</a></h4>
             <div class="card-desription">
-              <p><em>Co-authored with Nicholas Sambanis (UPenn)</em> <br> A case study</p>
+              <p><em>Co-authored with Nicholas Sambanis (UPenn) and William Wohlforth (Dartmouth)</em> <br> A case study</p>
             </div>
           </div>
         </div>
